[css] Fix header of trading table misalignment #6242

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -363,6 +363,7 @@ a
     padding-top: 0.35rem
     padding-bottom: 0.35rem
     vertical-align: middle
+    padding-left: 1.5rem
 
     &:first-child
       padding-left: 1.5rem
